--- a/config/debug_mid360.yaml
+++ b/config/debug_mid360.yaml
@@ -28,6 +28,8 @@ publish:
     scan_publish_en:  true       # false: close all the point cloud output
     dense_publish_en: true       # false: low down the points number in a global-frame point clouds scan.
     scan_bodyframe_pub_en: true  # true: output the point cloud scans in IMU-body-frame
+    feature_pub_en: true
+    effect_pub_en: true
 
 pcd_save:
     pcd_save_en: true
@@ -36,4 +38,4 @@ pcd_save:
 
 reloc:
   reloc_en: true
-  reloc_topic: "reloc/cloud_align"
+  reloc_topic: "reloc/manual"
